--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Mardi Gras Bingo</title>
-   <link rel="stylesheet" href="styles/main.css">
+   <link rel="stylesheet" href="public/styles/main.css">
    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
       integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-   <script src="scripts/script.js"></script>
+   <script src="public/scripts/script.js" defer></script>
 </head>
 
 <body>
