--- a/index.html
+++ b/index.html
@@ -12,7 +12,27 @@
    <script src="public/scripts/script.js" defer></script>
 </head>
 
-<body>
+<body class="background">
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
+   <span class="bg-circle"></span>
    <header>
       <h1>BINGO</h1>
    </header>
