Render the bingo tiles

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
    </header>
    <main>
       <div class="container">
-         <button class="tile"></button>
-         <button class="tile"></button>
-         <button class="tile"></button>
-         <button class="tile"></button>
-         <button class="tile"></button>
+         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile"><span class="tile-text"></span></button>
 
          <button class="tile"><span class="tile-text"></span></button>
          <button class="tile"><span class="tile-text"></span></button>
