Compare Tiles for Bingo

--- a/index.html
+++ b/index.html
@@ -38,37 +38,41 @@
    </header>
    <main>
       <div class="container">
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
 
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
 
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile" disabled><span class="tile-text">Free Space</span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" id="freeSpace" data-checked="check" disabled><span class="tile-text">Free Space</span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
 
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
 
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
-         <button class="tile"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
       </div>
    </main>
+
+   <footer>
+      <p>Made by Rommel Isaac Baldivas</p>
+   </footer>
 </body>
 
 </html>
