Displays Bingo when won

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Mardi Gras Bingo</title>
+   <script src="https://kit.fontawesome.com/d6a4ed92eb.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="public/styles/main.css">
    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
       integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
@@ -33,9 +34,19 @@
    <span class="bg-circle"></span>
    <span class="bg-circle"></span>
    <span class="bg-circle"></span>
+
+   <div class="bingo-modal">
+      <div class="overlay"></div>
+      <div class="bingo-announce">
+            <h1>🎉BINGO!🎉</h1>
+            <button id="checkBtn">Check</button>
+      </div>
+   </div>
+
    <header>
       <h1>BINGO</h1>
    </header>
+
    <main>
       <div class="container">
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
@@ -52,7 +63,8 @@
 
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
-         <button class="tile" id="freeSpace" data-checked="check" disabled><span class="tile-text">Free Space</span></button>
+         <button class="tile" id="freeSpace" data-checked="check" disabled><span class="tile-text">Free
+               Space</span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
 
@@ -68,6 +80,8 @@
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
       </div>
+
+
    </main>
 
    <footer>
