--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <title>Mardi Gras Bingo</title>
    <script src="https://kit.fontawesome.com/d6a4ed92eb.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="public/styles/main.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
       integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
    <script src="public/scripts/script.js" defer></script>
@@ -38,8 +39,8 @@
    <div class="bingo-modal">
       <div class="overlay"></div>
       <div class="bingo-announce">
-            <h1>🎉BINGO!🎉</h1>
-            <button id="checkBtn">Check</button>
+         <h1>🎉BINGO!🎉</h1>
+         <button id="checkBtn">Check</button>
       </div>
    </div>
 
