Wheel of Names Picker

--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
 
    <main>
       <header>
-         <h1>BINGO</h1>
+         <h1 class="animate__animated animate__tada"><a href="https://wheelofnames.com/pfb-7g3" target="_blank">MARDI GRAS BINGO</a>
+         </h1>
       </header>
       <div class="container">
+         <button class="tile" id="topLeft" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
-         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
-         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" id="topRight" data-checked="uncheck"><span class="tile-text"></span></button>
 
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
@@ -76,11 +77,11 @@
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
 
+         <button class="tile" id="bottomLeft" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
          <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
-         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
-         <button class="tile" data-checked="uncheck"><span class="tile-text"></span></button>
+         <button class="tile" id="bottomRight" data-checked="uncheck"><span class="tile-text"></span></button>
       </div>
 
 
